# simple_atm

./: CMakeLists.txt  LICENSE  README.md  example.cpp  main.cpp
include/: atm_controller.hpp  bank.hpp  cash_bin.hpp
src/: atm_controller.cpp
test/: atm_controller_test.cpp
